# LGA_VimeoDownloader

./: .gitignore  CMakeLists.txt  COMPATIBILIDAD_MACOS_PLAN.md  CONFIGURACION_LINTER_VSCODE.md  DOWNLOAD_QUEUE_SYSTEM.md  GUIA_INSTALACION_MACOS.md  PLATFORM_DIFFERENCES.md  README.md  VimeoDownloader_installer.iss  compilar.bat  compilar.sh  create_installer.sh  deploy.bat  deploy.sh  instalador.bat  limpiar.bat  limpiar.sh
.github/workflows/: build-macos.yml
cmake/: Info.plist.in  windows_icon.rc.in
include/vimeodownloader/: colorutils.h  downloader.h  downloaditem.h  downloadqueue.h  mainwindow.h  toolsmanager.h
resources/: resources.qrc
resources/icons/Alta/: LGA_VimeoDownloader.icns  LGA_VimeoDownloader.psd
resources/styles/: dark_theme.qss
src/: main.cpp
src/core/: downloader.cpp  downloadqueue.cpp
src/ui/: mainwindow.cpp
src/utils/: colorutils.cpp  toolsmanager.cpp
temp_pruebas_compatibility/: compilar.sh  log_pruebas.txt
